// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sampleValidator Correctly identifies invalid barcodes file 1`] = `
Array [
  "Invalid barcodes.tsv file. 2 barcodes expected, but 1 found.",
]
`;

exports[`sampleValidator Correctly identifies invalid features file 1`] = `
Array [
  "Invalid features/genes.tsv file. 3 genes expected, but 2 found.",
]
`;

exports[`sampleValidator Correctly identifies transposed matrix file 1`] = `
Array [
  "Invalid matrix.mtx file: Matrix is transposed.",
  "Invalid barcodes.tsv file. 3 barcodes expected, but 2 found.",
  "Invalid features/genes.tsv file. 2 genes expected, but 3 found.",
]
`;
